fixtures/typescript/fallback/should_fail/lookup_else_default.ts
export function readToolUseId(toolUse: Record<string, string>): string {
  return "toolUseId" in toolUse ? toolUse["toolUseId"] : "tool"
}
